--- a/CNX.Core.Respository/CNX.Core.Repository.csproj
+++ b/CNX.Core.Respository/CNX.Core.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,10 +7,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\CNX.Core.WebApi\bin\Debug\</OutputPath>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CNX.Core.IRespository\CNX.Core.IRepository.csproj" />
